--- a/Cinema Room Manager/Tickets/task-info.yaml
+++ b/Cinema Room Manager/Tickets/task-info.yaml
@@ -332,24 +332,5 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/133/stages/711/implement#comment
-status: Failed
-feedback:
-  message: |-
-    Wrong answer in test #1
-
-    After entering a row number and a seat number in that row you should print the seating arrangement like in example!
-    Your output should contain &#39;Cinema:&#39;
-
-    Please find below the output of your program during this failed test.
-    Note that the &#39;&gt;&#39; character indicates the beginning of the input line.
-
-    ---
-
-    Enter the number of rows:
-    &gt;&gt; 7
-    Enter the number of seats in each row:
-    &gt;&gt; 8
-    Total income:
-    $560
-  time: Thu, 21 Oct 2021 09:59:07 UTC
+status: Solved
 record: 3
