--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/420385/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Fri, 29 Oct 2021 16:27:08 UTC
+update_date: Fri, 29 Oct 2021 21:08:00 UTC
 stages:
 - id: 709
   step: 11105
@@ -13,7 +13,7 @@ stages:
   is_completed: true
 - id: 711
   step: 11107
-  is_completed: false
+  is_completed: true
 - id: 712
   step: 11108
   is_completed: false
